# entry-server

./: .gitignore  Cargo.toml  Dockerfile  README.md  README_CN.md  docker-compose.yaml  entry-config.yaml  rust-toolchain.toml
.github/workflows/: build.yml  docker.yml  rust.yml
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs
crates/entry-x/: Cargo.toml
crates/entry-x/src/: logger.rs  main.rs  state.rs
crates/entry-x/src/domain/user/: api.rs  model.rs
crates/entry-x/src/middleware/: mod.rs  response_wrapper.rs
crates/entry_x/: Cargo.toml
crates/entry_x/src/: cons.rs  db.rs  error.rs  logger.rs  main.rs  tool.rs
crates/entry_x/src/biz/: README.md  macros.rs  mod.rs
crates/entry_x/src/biz/activation/: service.rs
crates/entry_x/src/biz/entity/: activations.rs  licenses.rs  prelude.rs  synchronize.rs  users.rs
crates/entry_x/src/biz/license/: api.rs  mod.rs  model.rs  service.rs
crates/entry_x/src/biz/synchronize/: api.rs  mod.rs  service.rs
crates/entry_x/src/biz/user/: api.rs  auth_api.rs  mod.rs  model.rs  service.rs
crates/entry_x/src/domain/: README.md  macros.rs  mod.rs
crates/entry_x/src/domain/activation/: service.rs
crates/entry_x/src/domain/entity/: activations.rs  licenses.rs  mod.rs  synchronize.rs  users.rs
crates/entry_x/src/domain/license/: api.rs  mod.rs  service.rs
crates/entry_x/src/domain/synchronize/: api.rs  mod.rs  model.rs  service.rs
crates/entry_x/src/domain/user/: api.rs  auth_api.rs  cons.rs  mod.rs  model.rs  service.rs
crates/entry_x/src/internal/: conf.rs  error.rs
crates/entry_x/src/middleware/: authenticator.rs  mod.rs  request_trace.rs  response_wrapper.rs
crates/oauth/: Cargo.toml
crates/oauth-client/: Cargo.toml  README.md
crates/oauth-client/src/: consts.rs  github.rs  lib.rs
crates/oauth/src/: github.rs
crates/oauth_client/: Cargo.toml  README.md
crates/oauth_client/src/: consts.rs  github.rs  lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/server/src/biz/: macros.rs  mod.rs
crates/server/src/biz/entity/: activations.rs  mod.rs
crates/server/src/biz/license/: api.rs  mod.rs  service.rs
crates/server/src/biz/synchronize/: api.rs  mod.rs  model.rs
crates/server/src/biz/user/: api.rs  auth_api.rs  mod.rs  service.rs
crates/server/src/internal/: app_state.rs  conf.rs  db.rs  error.rs  mod.rs  router_tree.rs
crates/server/src/middleware/: authenticator.rs  mod.rs  request_trace.rs  response_wrapper.rs
crates/task/: Cargo.toml
crates/task/src/: cons.rs  lib.rs  schedule.rs  task.rs
crates/util/: Cargo.toml
crates/util/src/: cache.rs  http.rs  lib.rs
entry-oauth-client/: Cargo.toml
entry-server/: Cargo.toml
entry-server/src/: conf.rs  tool.rs
entry-server/src/domain/entity/: users.rs
entry-server/src/middleware/: request_trace.rs
migrations/: 1_init.sql
sqls/: 1_init.sql
src/: conf.rs  cons.rs  db.rs  error.rs  main.rs  state.rs  tool.rs
src/domain/: README.md  mod.rs
src/domain/entity/: activations.rs  licenses.rs  prelude.rs  users.rs
src/domain/user/: api.rs  mod.rs  model.rs  service.rs
src/middleware/: mod.rs  request_trace.rs  resp_wrapper.rs  response_wrapper.rs
tests/: README.md  license.hurl  openapi_3.0.json  synchronize.hurl
tests/user/: create.hurl  get.hurl  login.hurl  update_pwd.hurl
tests/user/oauth/: oauth_login.hurl  oauth_url.hurl
