[workspace]
resolver = "2"
members = ["crates/entry-x", "crates/oauth-client", "crates/util"]
default-members = ["crates/entry-x"]
[workspace.package]
name = "entry-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0.81"
dotenvy = "0.15.7"
env_logger = "0.11.3"
log = "0.4.21"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.58"
tokio = "1.36.0"
once_cell = "1.19.0"
pingora-memory-cache = "0.1.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }

entry_x = { path = "crates/entry-x" }
util = { path = "crates/util" }
oauth_client = { path = "crates/oauth-client" }

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = 'z'    # Optimize for size

[profile.bench]
codegen-units = 1
incremental = true
lto = true
opt-level = 'z'    # Optimize for size
