[package]

name = "entry-server"
version.workspace = true
edition.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
dotenvy.workspace = true
env_logger.workspace = true
log.workspace = true
rand.workspace = true
once_cell.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }

axum = "0.7.4"
sea-orm = { version = "0.12.15", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
  "with-time",
  "with-json",
  "with-uuid",
] }
time = { version = "0.3.34", features = ["serde-human-readable"] }
tower = "0.4.13"
uuid = { version = "1.7.0", features = ["v4", "serde"] }

axum-macros = "0.4.1"
tower-http = { version = "0.5.2", features = ["cors"] }
http-body-util = "0.1.1"
argon2 = { version = "0.5.3" }

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = 'z'    # Optimize for size

[profile.bench]
codegen-units = 1
incremental = true
lto = true
opt-level = 'z'    # Optimize for size
