[package]
name = "entry-oauth-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
pingora-memory-cache.workspace = true
util.workspace = true
reqwest = { version = "0.12.0", features = ["json", "rustls-tls", "socks"] }
