[package]

name = "server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "entry-server"
path = "src/main.rs"
doc = false

[dependencies]
anyhow.workspace = true
dotenvy.workspace = true
env_logger.workspace = true
log.workspace = true
rand.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }

# dependencies in project
oauth_client.workspace = true
util.workspace = true
task.workspace = true


axum = "0.7.4"
sea-orm = { workspace = true, features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
  "with-time",
  "with-json",
  "with-uuid",
] }
time.workspace = true
tower = "0.4.13"
uuid.workspace = true

axum-macros = "0.4.1"
tower-http = { version = "0.5.2", features = [
  "cors",
  "set-header",
  "propagate-header",
] }
http-body-util = "0.1.1"
