[package]
name = "task"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = [
    "time",
    "macros",
    "sync",
    "signal",
    "rt",
] }
log.workspace = true
util.workspace = true
