[package]
name = "util"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time.workspace = true
anyhow.workspace = true
rand.workspace = true
uuid.workspace = true
reqwest = { version = "0.12.0", features = ["json", "rustls-tls", "socks"] }
tokio = { workspace = true, features = ["sync"] }
serde.workspace = true
fred = "8.0.5"
sha2 = "0.10"
base64ct.workspace = true
argon2 = { version = "0.5.3", features = ["password-hash"] }

